# swagger.json
@@ -54,6 +54,21 @@
                 },
                 "password": {
                   "example": "any"
+                },
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "familyName": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
                 }
               }
             }
@@ -161,10 +176,32 @@
       },
       "post": {
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "occurence": {
+                  "example": "any"
+                },
+                "group": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -261,10 +298,47 @@
       },
       "post": {
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "familyName": {
+                  "example": "any"
+                },
+                "contracts": {
+                  "example": "any"
+                },
+                "childLastName": {
+                  "example": "any"
+                },
+                "childFirstName": {
+                  "example": "any"
+                },
+                "childDOB": {
+                  "example": "any"
+                },
+                "parent1userId": {
+                  "example": "any"
+                },
+                "parent2userId": {
+                  "example": "any"
+                },
+                "holidayId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
